# gathering_graphrag

./: README.md  pyproject.toml  requirements.txt
scripts/: test_api_key.py  test_api_keys.py
solutions/: base_code.py
